--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "express-session": "^1.14.0",
     "mongoose": "^4.5.8",
     "morgan": "~1.7.0",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
     "serve-favicon": "~2.3.0"
   }
 }
