--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "ejs": "~2.4.1",
     "express": "~4.13.4",
     "express-session": "^1.14.0",
+    "mongodb": "^2.2.5",
     "mongoose": "^4.5.8",
     "morgan": "~1.7.0",
     "passport": "^0.3.2",
