--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./app"
   },
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
@@ -14,11 +14,13 @@
     "ejs": "~2.4.1",
     "express": "~4.13.4",
     "express-session": "^1.14.0",
+    "express-socket.io-session": "^1.3.1",
     "mongodb": "^2.2.5",
     "mongoose": "^4.5.8",
     "morgan": "~1.7.0",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "socket.io": "^1.4.8"
   }
 }
