--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mongodb": "^2.2.5",
     "mongoose": "^4.5.8",
     "morgan": "~1.7.0",
+    "node-schedule": "^1.1.1",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "serve-favicon": "~2.3.0",
