--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "passport-local": "^1.0.0",
     "serve-favicon": "~2.3.0",
     "socket.io": "^1.4.8"
+  },
+  "devDependencies": {
+    "grunt-sloc": "^0.7.1"
   }
 }
