--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "~4.13.4",
     "express-session": "^1.14.0",
     "express-socket.io-session": "^1.3.1",
+    "fcm-node": "^1.0.14",
     "mongodb": "^2.2.5",
     "mongoose": "^4.5.8",
     "morgan": "~1.7.0",
